src/grammar/girdleParser.py
# Generated from java-escape by ANTLR 4.5
# encoding: utf-8
from antlr4 import *
from io import StringIO
package = globals().get("__package__", None)
ischild = len(package)>0 if package is not None else False
if ischild:
    from .girdleListener import girdleListener
else:
    from girdleListener import girdleListener


class girdleParser ( Parser ):

    grammarFileName = "java-escape"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ u"<INVALID>", u"'<=>'", u"'or'", u"'and'", u"'('", 
                     u"')'", u"'.'", u"<INVALID>", u"'forall'", u"'exists'", 
                     u"'=>'" ]

    symbolicNames = [ u"<INVALID>", u"<INVALID>", u"<INVALID>", u"<INVALID>", 
                      u"Lparen", u"Rparen", u"Dot", u"Not", u"Forall", u"Exists", 
                      u"Implies", u"Whitespace", u"Variable" ]

    RULE_primary_fol_expression = 0
    RULE_fol_expression = 1
    RULE_fol_universal_quantifier = 2
    RULE_fol_existential_quantifier = 3
    RULE_fol_implication_or_equivalence = 4
    RULE_fol_implication = 5
    RULE_fol_equivalence = 6
    RULE_fol_disjunction = 7
    RULE_fol_conjunction = 8
    RULE_fol_negation = 9
    RULE_expression = 10
    RULE_primary_expression = 11
    RULE_line = 12

    ruleNames =  [ "primary_fol_expression", "fol_expression", "fol_universal_quantifier", 
                   "fol_existential_quantifier", "fol_implication_or_equivalence", 
                   "fol_implication", "fol_equivalence", "fol_disjunction", 
                   "fol_conjunction", "fol_negation", "expression", "primary_expression", 
                   "line" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    Lparen=4
    Rparen=5
    Dot=6
    Not=7
    Forall=8
    Exists=9
    Implies=10
    Whitespace=11
    Variable=12

    def __init__(self, input:TokenStream):
        super().__init__(input)
        #self.checkVersion("4.5")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None



    class Primary_fol_expressionContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def expression(self):
            return self.getTypedRuleContext(girdleParser.ExpressionContext,0)


        def fol_expression(self):
            return self.getTypedRuleContext(girdleParser.Fol_expressionContext,0)


        def getRuleIndex(self):
            return girdleParser.RULE_primary_fol_expression

        def enterRule(self, listener:ParseTreeListener):
            if isinstance( listener, girdleListener ):
                listener.enterPrimary_fol_expression(self)

        def exitRule(self, listener:ParseTreeListener):
            if isinstance( listener, girdleListener ):
                listener.exitPrimary_fol_expression(self)




    def primary_fol_expression(self):

        localctx = girdleParser.Primary_fol_expressionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_primary_fol_expression)
        try:
            self.state = 31
            la_ = self._interp.adaptivePredict(self._input,0,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 26
                self.expression()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 27
                self.match(girdleParser.Lparen)
                self.state = 28
                self.fol_expression()
                self.state = 29
                self.match(girdleParser.Rparen)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Fol_expressionContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def fol_universal_quantifier(self):
            return self.getTypedRuleContext(girdleParser.Fol_universal_quantifierContext,0)


        def getRuleIndex(self):
            return girdleParser.RULE_fol_expression

        def enterRule(self, listener:ParseTreeListener):
            if isinstance( listener, girdleListener ):
                listener.enterFol_expression(self)

        def exitRule(self, listener:ParseTreeListener):
            if isinstance( listener, girdleListener ):
                listener.exitFol_expression(self)




    def fol_expression(self):

        localctx = girdleParser.Fol_expressionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_fol_expression)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 33
            self.fol_universal_quantifier()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Fol_universal_quantifierContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def Variable(self):
            return self.getToken(girdleParser.Variable, 0)

        def fol_expression(self):
            return self.getTypedRuleContext(girdleParser.Fol_expressionContext,0)


        def fol_existential_quantifier(self):
            return self.getTypedRuleContext(girdleParser.Fol_existential_quantifierContext,0)


        def getRuleIndex(self):
            return girdleParser.RULE_fol_universal_quantifier

        def enterRule(self, listener:ParseTreeListener):
            if isinstance( listener, girdleListener ):
                listener.enterFol_universal_quantifier(self)

        def exitRule(self, listener:ParseTreeListener):
            if isinstance( listener, girdleListener ):
                listener.exitFol_universal_quantifier(self)




    def fol_universal_quantifier(self):

        localctx = girdleParser.Fol_universal_quantifierContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_fol_universal_quantifier)
        try:
            self.state = 40
            token = self._input.LA(1)
            if token in [girdleParser.Forall]:
                self.enterOuterAlt(localctx, 1)
                self.state = 35
                self.match(girdleParser.Forall)
                self.state = 36
                self.match(girdleParser.Variable)
                self.state = 37
                self.match(girdleParser.Dot)
                self.state = 38
                self.fol_expression()

            elif token in [girdleParser.Lparen, girdleParser.Not, girdleParser.Exists, girdleParser.Variable]:
                self.enterOuterAlt(localctx, 2)
                self.state = 39
                self.fol_existential_quantifier()

            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Fol_existential_quantifierContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def Variable(self):
            return self.getToken(girdleParser.Variable, 0)

        def fol_expression(self):
            return self.getTypedRuleContext(girdleParser.Fol_expressionContext,0)


        def fol_implication_or_equivalence(self):
            return self.getTypedRuleContext(girdleParser.Fol_implication_or_equivalenceContext,0)


        def getRuleIndex(self):
            return girdleParser.RULE_fol_existential_quantifier

        def enterRule(self, listener:ParseTreeListener):
            if isinstance( listener, girdleListener ):
                listener.enterFol_existential_quantifier(self)

        def exitRule(self, listener:ParseTreeListener):
            if isinstance( listener, girdleListener ):
                listener.exitFol_existential_quantifier(self)




    def fol_existential_quantifier(self):

        localctx = girdleParser.Fol_existential_quantifierContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_fol_existential_quantifier)
        try:
            self.state = 47
            token = self._input.LA(1)
            if token in [girdleParser.Exists]:
                self.enterOuterAlt(localctx, 1)
                self.state = 42
                self.match(girdleParser.Exists)
                self.state = 43
                self.match(girdleParser.Variable)
                self.state = 44
                self.match(girdleParser.Dot)
                self.state = 45
                self.fol_expression()

            elif token in [girdleParser.Lparen, girdleParser.Not, girdleParser.Variable]:
                self.enterOuterAlt(localctx, 2)
                self.state = 46
                self.fol_implication_or_equivalence()

            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Fol_implication_or_equivalenceContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def fol_implication(self):
            return self.getTypedRuleContext(girdleParser.Fol_implicationContext,0)


        def fol_equivalence(self):
            return self.getTypedRuleContext(girdleParser.Fol_equivalenceContext,0)


        def getRuleIndex(self):
            return girdleParser.RULE_fol_implication_or_equivalence

        def enterRule(self, listener:ParseTreeListener):
            if isinstance( listener, girdleListener ):
                listener.enterFol_implication_or_equivalence(self)

        def exitRule(self, listener:ParseTreeListener):
            if isinstance( listener, girdleListener ):
                listener.exitFol_implication_or_equivalence(self)




    def fol_implication_or_equivalence(self):

        localctx = girdleParser.Fol_implication_or_equivalenceContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_fol_implication_or_equivalence)
        try:
            self.state = 51
            la_ = self._interp.adaptivePredict(self._input,3,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 49
                self.fol_implication()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 50
                self.fol_equivalence()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Fol_implicationContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def fol_disjunction(self):
            return self.getTypedRuleContext(girdleParser.Fol_disjunctionContext,0)


        def fol_expression(self):
            return self.getTypedRuleContext(girdleParser.Fol_expressionContext,0)


        def getRuleIndex(self):
            return girdleParser.RULE_fol_implication

        def enterRule(self, listener:ParseTreeListener):
            if isinstance( listener, girdleListener ):
                listener.enterFol_implication(self)

        def exitRule(self, listener:ParseTreeListener):
            if isinstance( listener, girdleListener ):
                listener.exitFol_implication(self)




    def fol_implication(self):

        localctx = girdleParser.Fol_implicationContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_fol_implication)
        try:
            self.state = 58
            la_ = self._interp.adaptivePredict(self._input,4,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 53
                self.fol_disjunction()
                self.state = 54
                self.match(girdleParser.Implies)
                self.state = 55
                self.fol_expression()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 57
                self.fol_disjunction()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Fol_equivalenceContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def fol_disjunction(self):
            return self.getTypedRuleContext(girdleParser.Fol_disjunctionContext,0)


        def fol_expression(self):
            return self.getTypedRuleContext(girdleParser.Fol_expressionContext,0)


        def getRuleIndex(self):
            return girdleParser.RULE_fol_equivalence

        def enterRule(self, listener:ParseTreeListener):
            if isinstance( listener, girdleListener ):
                listener.enterFol_equivalence(self)

        def exitRule(self, listener:ParseTreeListener):
            if isinstance( listener, girdleListener ):
                listener.exitFol_equivalence(self)




    def fol_equivalence(self):

        localctx = girdleParser.Fol_equivalenceContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_fol_equivalence)
        try:
            self.state = 65
            la_ = self._interp.adaptivePredict(self._input,5,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 60
                self.fol_disjunction()
                self.state = 61
                self.match(girdleParser.T__0)
                self.state = 62
                self.fol_expression()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 64
                self.fol_disjunction()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Fol_disjunctionContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def fol_conjunction(self):
            return self.getTypedRuleContext(girdleParser.Fol_conjunctionContext,0)


        def fol_disjunction(self):
            return self.getTypedRuleContext(girdleParser.Fol_disjunctionContext,0)


        def getRuleIndex(self):
            return girdleParser.RULE_fol_disjunction

        def enterRule(self, listener:ParseTreeListener):
            if isinstance( listener, girdleListener ):
                listener.enterFol_disjunction(self)

        def exitRule(self, listener:ParseTreeListener):
            if isinstance( listener, girdleListener ):
                listener.exitFol_disjunction(self)




    def fol_disjunction(self):

        localctx = girdleParser.Fol_disjunctionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_fol_disjunction)
        try:
            self.state = 72
            la_ = self._interp.adaptivePredict(self._input,6,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 67
                self.fol_conjunction()
                self.state = 68
                self.match(girdleParser.T__1)
                self.state = 69
                self.fol_disjunction()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 71
                self.fol_conjunction()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Fol_conjunctionContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def fol_negation(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(girdleParser.Fol_negationContext)
            else:
                return self.getTypedRuleContext(girdleParser.Fol_negationContext,i)


        def getRuleIndex(self):
            return girdleParser.RULE_fol_conjunction

        def enterRule(self, listener:ParseTreeListener):
            if isinstance( listener, girdleListener ):
                listener.enterFol_conjunction(self)

        def exitRule(self, listener:ParseTreeListener):
            if isinstance( listener, girdleListener ):
                listener.exitFol_conjunction(self)




    def fol_conjunction(self):

        localctx = girdleParser.Fol_conjunctionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_fol_conjunction)
        try:
            self.state = 79
            la_ = self._interp.adaptivePredict(self._input,7,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 74
                self.fol_negation()
                self.state = 75
                self.match(girdleParser.T__2)
                self.state = 76
                self.fol_negation()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 78
                self.fol_negation()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Fol_negationContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def Not(self):
            return self.getToken(girdleParser.Not, 0)

        def primary_fol_expression(self):
            return self.getTypedRuleContext(girdleParser.Primary_fol_expressionContext,0)


        def getRuleIndex(self):
            return girdleParser.RULE_fol_negation

        def enterRule(self, listener:ParseTreeListener):
            if isinstance( listener, girdleListener ):
                listener.enterFol_negation(self)

        def exitRule(self, listener:ParseTreeListener):
            if isinstance( listener, girdleListener ):
                listener.exitFol_negation(self)




    def fol_negation(self):

        localctx = girdleParser.Fol_negationContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_fol_negation)
        try:
            self.state = 84
            token = self._input.LA(1)
            if token in [girdleParser.Not]:
                self.enterOuterAlt(localctx, 1)
                self.state = 81
                self.match(girdleParser.Not)
                self.state = 82
                self.primary_fol_expression()

            elif token in [girdleParser.Lparen, girdleParser.Variable]:
                self.enterOuterAlt(localctx, 2)
                self.state = 83
                self.primary_fol_expression()

            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class ExpressionContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def primary_expression(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(girdleParser.Primary_expressionContext)
            else:
                return self.getTypedRuleContext(girdleParser.Primary_expressionContext,i)


        def getRuleIndex(self):
            return girdleParser.RULE_expression

        def enterRule(self, listener:ParseTreeListener):
            if isinstance( listener, girdleListener ):
                listener.enterExpression(self)

        def exitRule(self, listener:ParseTreeListener):
            if isinstance( listener, girdleListener ):
                listener.exitExpression(self)




    def expression(self):

        localctx = girdleParser.ExpressionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_expression)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 87 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 86
                self.primary_expression()
                self.state = 89 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not (_la==girdleParser.Lparen or _la==girdleParser.Variable):
                    break

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Primary_expressionContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def Variable(self):
            return self.getToken(girdleParser.Variable, 0)

        def expression(self):
            return self.getTypedRuleContext(girdleParser.ExpressionContext,0)


        def getRuleIndex(self):
            return girdleParser.RULE_primary_expression

        def enterRule(self, listener:ParseTreeListener):
            if isinstance( listener, girdleListener ):
                listener.enterPrimary_expression(self)

        def exitRule(self, listener:ParseTreeListener):
            if isinstance( listener, girdleListener ):
                listener.exitPrimary_expression(self)




    def primary_expression(self):

        localctx = girdleParser.Primary_expressionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_primary_expression)
        try:
            self.state = 96
            token = self._input.LA(1)
            if token in [girdleParser.Variable]:
                self.enterOuterAlt(localctx, 1)
                self.state = 91
                self.match(girdleParser.Variable)

            elif token in [girdleParser.Lparen]:
                self.enterOuterAlt(localctx, 2)
                self.state = 92
                self.match(girdleParser.Lparen)
                self.state = 93
                self.expression()
                self.state = 94
                self.match(girdleParser.Rparen)

            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class LineContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def fol_expression(self):
            return self.getTypedRuleContext(girdleParser.Fol_expressionContext,0)


        def EOF(self):
            return self.getToken(girdleParser.EOF, 0)

        def getRuleIndex(self):
            return girdleParser.RULE_line

        def enterRule(self, listener:ParseTreeListener):
            if isinstance( listener, girdleListener ):
                listener.enterLine(self)

        def exitRule(self, listener:ParseTreeListener):
            if isinstance( listener, girdleListener ):
                listener.exitLine(self)




    def line(self):

        localctx = girdleParser.LineContext(self, self._ctx, self.state)
        self.enterRule(localctx, 24, self.RULE_line)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 98
            self.fol_expression()
            self.state = 99
            self.match(girdleParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx




